 * Fixed a typo that could sometimes break icon sorting, and may have also broken meta icons occasionally.
 * Refactored the configuration for Animation and Text notifications, fixing a minor issue with settings not saving in the process.
 * The Unit Specialization condition should now work for arena enemies from your own server.

===v7.2.6===
====Bug Fixes====
 * Implemented a better fix to animations missing required anchors, since the fix in v7.2.5 broke several things.

===v7.2.5===
 * Tweaked some of the default text layouts so that they more closely resemble their pre-WoW-6.1 appearance.
 * Removed the diminishing returns duration setting, as it is now always 18 seconds.

====Bug Fixes====
 * Removed some old code that was needed back when cooldown sweeps weren't inheriting their parent's opacity in the WoD beta. This was breaking cooldown sweeps on icons with Icon Alpha Flash animations where the alpha would go to 0.
 * Icon Events are now setup at the end of icon setup to avoid issues with animations missing required anchors.
 * Fixed a rare issue caused by unused parentheses on condition settings with less than 3 conditions.
 * Fixed IconType_unitcondition\unitcondition.lua:96: attempt to index local "Conditions" (a nil value).

===v7.2.4===
 * New icon type: Unit Condition Icon.
 * Added Dialog as a possible sound channel.
 * The Icon Shown Time and Icon Hidden Time conditions are now deprecated in favor of using timer notification handlers.

====Bug Fixes====
 * Fixed an error that will happen when screen animations end.
 * Cooldown icons that aren't set to show when usable should once again fire an On Finish event.
 * Fixed ItemCache.lua:110 bad argument #1 to 'pairs' (table expected, got nil)
 * Fixed an issue that would break upgrades over locale-specific data.
 * Fixed colors of the backdrop for bar groups being wrong (green and blue were swapped).
 * The Eclipse condition should now be much more responsive.